--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Kirill Murashov <me@kirillmurashov.com>",
   "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=develop webpack-dev-server -d",
+    "start": "cross-env NODE_ENV=develop webpack-dev-server -d",
     "svg": "vsvg -s ./src/demo/svg -t ./src/demo/icons",
     "build": "webpack"
   },
@@ -43,7 +43,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
+    "cross-env": "^7.0.2",
     "css-color-function": "^1.3.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
@@ -153,7 +153,7 @@
     "watchpack": "^1.5.0",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.4.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "3.1.1",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.18.0",
