--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "watchpack": "^1.5.0",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.4.0",
-    "webpack-cli": "3.1.1",
+    "webpack-cli": "^2.0.14",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.18.0",
